# NovaMarket

./: .gitignore  README.md
toolkit/: .gitignore  CHANGELOG.md  pyproject.toml
toolkit/docs/architecture/: AI_CONTEXT.md  ARCHITECTURE.md  ENGINEERING_GUIDELINES.md  PROJECT_STATE.md  ROADMAP.md  SESSION_START.md
toolkit/src/novamarket_toolkit/: cli.py
toolkit/src/novamarket_toolkit/commands/: __init__.py  doctor.py  export.py  generate.py  info.py  list.py  validate.py  version.py
toolkit/src/novamarket_toolkit/exporters/: base.py  exceptions.py  factory.py  registry.py
toolkit/src/novamarket_toolkit/generators/: base.py  exceptions.py  factory.py  registry.py
toolkit/src/novamarket_toolkit/glossary/: terms.json
toolkit/src/novamarket_toolkit/i18n/: loader.py  (+3 more)
toolkit/tests/: conftest.py  helpers.py  test_loader.py  test_translator.py
toolkit/tests/commands/: test_doctor.py  test_export.py  test_generate.py  test_info.py  test_list.py  test_validate.py  test_version.py
toolkit/tests/exporters/: test_factory.py  test_html_exporter.py  test_markdown_exporter.py  test_pdf_exporter.py  test_registry.py
toolkit/tests/generators/: test_base.py  test_bpmn_generator.py  test_factory.py  test_integration.py  test_registry.py  test_use_case_generator.py  test_user_story_generator.py
toolkit/tests/models/: test_use_case.py  test_user_story.py
toolkit/tests/pipeline/: test_pipeline.py  test_public_api.py
toolkit/tests/validators/: test_base.py  test_bpmn_validator.py  test_factory.py  test_registry.py  test_use_case_validator.py  test_user_story_validator.py
(+35 files in other folders)
