[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "novamarket-toolkit"
version = "0.1.0"
description = "Automation toolkit for Business and System Analysts"
readme = "README.md"
requires-python = ">=3.12"

dependencies = ["typer>=0.27.0"]

[project.optional-dependencies]
dev = ["black>=25.0.0", "pytest>=8.4.0", "ruff>=0.12.0"]

[project.scripts]
novamarket = "novamarket_toolkit.cli:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
